Initialize Redux, add and display books

--- a/frontend/src/components/Filter/Filter.css
+++ b/frontend/src/components/Filter/Filter.css
@@ -28,7 +28,7 @@
 }
 
 .filter button:hover {
-  background-color: #fb1414;
+  background-color: #ff3131;
 }
 
 @media screen and (max-width: 1024px) {
